--- a/index.html
+++ b/index.html
@@ -3,10 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <h1>Test</h1>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+    <title>Home Page</title>
+   
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <a class="navbar-brand" href="#">Logo</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about-me">About Me</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#experience">Experience</a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#projects">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact Me</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     
+      <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-6">
+                <img src="img/leather1.png" class="rounded float-left" alt="headshot">
+            </div>
+            <div class="col-lg-6 text-lg-center my-auto">
+                <h1>About Me</h1>
+            <p>Currently, I am a Technical Compliance Analyst for Invenco by GVR, 
+                        a Software as a Service company. As a compliance analyst, I provide reporting 
+                        and risk assessment for trouble sites and devices for multiple customers.        
+            
+                    </p>   
+            </div>
+        </div>
+    </div>
+    <hr>
+  
+
+
+
+    <div class="container" id="experience"></div> 
+        <h1>Experience</h1>
+        <hr>
+    </div>
+
+
+    <div class="container" id="projects">
+        <h1>Projects</h1>
+        <hr>
+    </div>
+
+
+    <div class="container" id="contact">
+        <h1>Contact Me</h1>
+        <hr>
+    </div>
+
+
 </body>
 </html>
