--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
   <div class="container-fluid" id="nav-main">
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar fixed navbar-expand-lg ">
       <a class="navbar-brand" href="#" id="logo">Logo</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,13 +49,13 @@
           </li>
         </ul>
       </div>
-    </nav>  
+    </nav>
   </div>
 
   <div class="container-fluid" id="about-me">
     <div class="row">
       <div class="col-lg-6" id="headshot">
-        <img src="img/leather1.png" class="rounded mx-auto d-block" alt="headshot">
+        <img src="img/headshots/headshot_secondary.png" class="rounded mx-auto d-block" alt="headshot">
       </div>
       <div class="col-lg-6 align-items-center d-flex" id="about-me-info">
         <p>My name is Alejandro Mendez and thank you for visiting my personal website! I am hoping to showcase
@@ -67,7 +67,6 @@
           guitar
           and making music with it, hiking and automobiles.
         </p>
-        <i class="bi bi-github"></i>
       </div>
     </div>
   </div>
@@ -106,7 +105,7 @@
 
   <div class="container" id="projects">
     <h1>Projects</h1>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide" data-interval ="false" >
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="img/powerbi.png" class="d-block w-100 h-25" alt="...">
@@ -169,9 +168,16 @@
         <div class="d-grid">
           <button class="btn btn-primary btn-lg" type="submit">Submit</button>
         </div>
-
       </form>
 
+    </div>
+  </div>
+
+  <div class="container-fluid" id="socials">
+    <div class="container" id="icons">
+      <a href="https://github.com/alexmendezcs/" target="_blank"><img src="img/icons/github.png" alt=""></a>
+      <a href="https://www.linkedin.com/in/alexmendezcs/" target="_blank"><img src="img/icons/linkedin.png" alt=""></a>
+      <a href="https://www.instagram.com/alexmendezcs/" target="_blank"><img src="img/icons/instagram.png" alt=""></a>
     </div>
   </div>
 </body>
