Corrected row containers to XXL max screen width

--- a/index.html
+++ b/index.html
@@ -48,11 +48,10 @@
   </div>
 
   <div class="row">
-    <div class="col-lg-5" id="headshot">
+    <div class="container col-xxl-5" id="headshot">
       <img src="img/headshots/headshot_secondary.png" alt="headshot">
     </div>
-    <div class="col-lg-7" id="about-me-info">
-      <div class="container-fluid ">
+    <div class="col-xxl-7" id="about-me-info">
         <h1>Alejandro Mendez</h1>
         <hr>
         <p>My passion is providing leadership, developing the necessary skills to provide significant and meaningful
@@ -61,7 +60,7 @@
           Downtown back in 2019 but I am excited to showcase my passion for technology. I am currently a Technical
           Compliance Analyst for Invenco by GVR (formerly known as Insite360). My job is to ensure customer's devices
           across their network are compliant to state and federal regulations and alarm processing for all customers that have
-          Managed Services.I also provide analysis and reporting on non-compliant devices through Salesforce, PowerBI and Excel.
+          Managed Services. I also provide analysis and reporting on non-compliant devices through Salesforce, PowerBI and Excel.
           My proudest achievement is creating a PowerBI from scratch to get visibility on connectivity and callback.
           <br>
           <br>
@@ -73,17 +72,14 @@
             href="https://www.linkedin.com/in/alexmendezcs/">LinkedIn</a>!
         </p>
         <hr>
-
-      </div>
-
     </div>
   </div>
 
   <div class="row" id="experience">
-    <div class="col-lg-2 text-center">
+    <div class="col-xxl-2 text-center">
       <img src="img/invenco.jpeg" alt="invenco_logo">
     </div>
-    <div class="col-lg-8" id="experience-info">
+    <div class="col-xxl-8" id="experience-info">
       <h2>Invenco by GVR</h2>
       <hr>
       <h3><em>Technical Compliance Analyst</em></h3>
